fix: dark mode and light mode toggles properly

--- a/static/main.css
+++ b/static/main.css
@@ -104,11 +104,7 @@ form button {
   position: fixed;
   top: 10px;
   right: 10px;
-}
-
-.submit-icon {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  color: #ccc;
+  width: 100px;
+  background-color: var(--text-color);
+  color: var(--bg-color);
 }
